# papyr

./: .gitignore  setup.cfg  setup.py
papyr/: __init__.py
