[metadata]
name = papyr
author = David Garaña
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
classifier =
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.6',
[files]
packages =
    papyr
